button but not responsive

--- a/css/style.css
+++ b/css/style.css
@@ -410,7 +410,7 @@ footer a img {
   max-height: 60px;
 }
 
-/* ------------------------- top bar ------------------------------*/
+/* ------------------------- top bar & header ------------------------------*/
 .top-bar.menu-item {
   background-color: #2A8055;
 }
@@ -444,6 +444,30 @@ img.custom-logo {
   z-index: 2;
 }
 
+.header-donate-section {
+  margin-top: 3em;
+  text-align: right;
+}
+.header-donate-section a.button {
+  background-color: Gainsboro;
+  color: BlueViolet;
+  border-radius: 5px;
+  font-weight: bold;
+  padding: 0.4em 1em;
+}
+.header-donate-section a.button:hover {
+  background-color: white;
+}
+
+/*
+.header-donate-section a.button {
+    background-color: white;
+    color: BlueViolet ;
+    border-radius: 5px;
+    font-weight:bold;
+    padding: 0.4em 1em;
+}
+*/
 /* ------------------------fontawsome ----------------------------------------------------------- */
 @font-face {
   font-family: '[set]Foundicons';
@@ -666,10 +690,6 @@ footer h4, footer h3 {
 
 .mycard-image:hover {
   opacity: 0.8;
-}
-
-.header-contact-phone {
-  color: white;
 }
 
 /* ----------------------- font sizes ------------------ */
